--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
             if (ua.indexOf('iPhone') > 0
                     || (ua.indexOf('Android') < 0) && (ua.indexOf('Mobile') < 0)
                     || ua.indexOf('Windows Phone') < 0) {
-                    location.href = 'https://script.google.com/a/gse.okayama-c.ed.jp/macros/s/AKfycbx0KU_zENIgkU072EKFi5Pb4YUWpKFKN6gQtxM_705bkjWY4t3eNfWGoS1_LADEOCETCA/exec';
+                    location.href = 'https://script.google.com/a/macros/gse.okayama-c.ed.jp/s/AKfycbyNzWZCoQjewsgiKj5h11Im5bodv4KG2M8-plqTVMp9fTt-tInvRWhF79zEZvqXZDGtNg/exec';
                 }
         </script>
         <script type="text/javascript">
@@ -13,7 +13,7 @@
 	if (ua.indexOf('iPhone') > 0
 			|| (ua.indexOf('Android') > 0) && (ua.indexOf('Mobile') > 0)
 			|| ua.indexOf('Windows Phone') > 0) {
-			location.href = 'https://script.google.com/a/gse.okayama-c.ed.jp/macros/s/AKfycbx0KU_zENIgkU072EKFi5Pb4YUWpKFKN6gQtxM_705bkjWY4t3eNfWGoS1_LADEOCETCA/exec';
+			location.href = 'https://script.google.com/a/macros/gse.okayama-c.ed.jp/s/AKfycbyNzWZCoQjewsgiKj5h11Im5bodv4KG2M8-plqTVMp9fTt-tInvRWhF79zEZvqXZDGtNg/exec';
 		}
 	}
         </script>
