--- a/explanation.html
+++ b/explanation.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>vote説明ページ</title>
+    <title>回答ページ</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://use.fontawesome.com/releases/v5.3.1/js/all.js" defer></script>
@@ -126,4 +126,3 @@ th {
     </div><div>
     </div>
 </body>
-Copyright © 2022 Gobousei All Rights Reserved.
