--- a/explanation.html
+++ b/explanation.html
@@ -90,7 +90,7 @@ th {
                 <div class="hero-body">
                     <div class="container">
                         <h1 class="title">
-                            意見書
+                            回答ページの使い方
                         </h1>
                     </div>
                 </div>
